--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,7 @@
     "password": "",
     "database": "bd_Farmacia",
     "host": "127.0.0.1",
-    "dialect": "mysql",
+    "dialect": "postgres",
     "logging": false
   }
 }
